town_ws/log/build_2022-03-14_12-31-29/village_li/stdout_stderr.log
running egg_info
creating ../../build/village_li/village_li.egg-info
writing ../../build/village_li/village_li.egg-info/PKG-INFO
writing dependency_links to ../../build/village_li/village_li.egg-info/dependency_links.txt
writing entry points to ../../build/village_li/village_li.egg-info/entry_points.txt
writing requirements to ../../build/village_li/village_li.egg-info/requires.txt
writing top-level names to ../../build/village_li/village_li.egg-info/top_level.txt
writing manifest file '../../build/village_li/village_li.egg-info/SOURCES.txt'
reading manifest file '../../build/village_li/village_li.egg-info/SOURCES.txt'
writing manifest file '../../build/village_li/village_li.egg-info/SOURCES.txt'
running build
running build_py
creating /home/zym/Desktop/zym-ros2/town_ws/build/village_li/build
creating /home/zym/Desktop/zym-ros2/town_ws/build/village_li/build/lib
creating /home/zym/Desktop/zym-ros2/town_ws/build/village_li/build/lib/village_li
copying village_li/li4.py -> /home/zym/Desktop/zym-ros2/town_ws/build/village_li/build/lib/village_li
copying village_li/__init__.py -> /home/zym/Desktop/zym-ros2/town_ws/build/village_li/build/lib/village_li
running install
running install_lib
creating /home/zym/Desktop/zym-ros2/town_ws/install/village_li/lib/python3.8/site-packages/village_li
copying /home/zym/Desktop/zym-ros2/town_ws/build/village_li/build/lib/village_li/li4.py -> /home/zym/Desktop/zym-ros2/town_ws/install/village_li/lib/python3.8/site-packages/village_li
copying /home/zym/Desktop/zym-ros2/town_ws/build/village_li/build/lib/village_li/__init__.py -> /home/zym/Desktop/zym-ros2/town_ws/install/village_li/lib/python3.8/site-packages/village_li
byte-compiling /home/zym/Desktop/zym-ros2/town_ws/install/village_li/lib/python3.8/site-packages/village_li/li4.py to li4.cpython-38.pyc
byte-compiling /home/zym/Desktop/zym-ros2/town_ws/install/village_li/lib/python3.8/site-packages/village_li/__init__.py to __init__.cpython-38.pyc
  File "/home/zym/Desktop/zym-ros2/town_ws/install/village_li/lib/python3.8/site-packages/village_li/li4.py", line 5
    """
    ^
SyntaxError: (unicode error) 'utf-8' codec can't decode byte 0xd4 in position 9: invalid continuation byte

running install_data
creating /home/zym/Desktop/zym-ros2/town_ws/install/village_li/share/ament_index
creating /home/zym/Desktop/zym-ros2/town_ws/install/village_li/share/ament_index/resource_index
creating /home/zym/Desktop/zym-ros2/town_ws/install/village_li/share/ament_index/resource_index/packages
copying resource/village_li -> /home/zym/Desktop/zym-ros2/town_ws/install/village_li/share/ament_index/resource_index/packages
copying package.xml -> /home/zym/Desktop/zym-ros2/town_ws/install/village_li/share/village_li
running install_egg_info
Copying ../../build/village_li/village_li.egg-info to /home/zym/Desktop/zym-ros2/town_ws/install/village_li/lib/python3.8/site-packages/village_li-0.0.0-py3.8.egg-info
running install_scripts
Installing li4_node script to /home/zym/Desktop/zym-ros2/town_ws/install/village_li/lib/village_li
writing list of installed files to '/home/zym/Desktop/zym-ros2/town_ws/build/village_li/install.log'
